# cache_service

./: .gitignore  Cargo.toml  README.md  load_test.lua
.github/workflows/: rust-tests.yml
src/: lib.rs  main.rs
src/cache/: in_memory_cache.rs  mod.rs  redis_cache.rs  schema.rs
src/handlers/: cache_handlers.rs  metrics_handlers.rs  mod.rs
src/models/: cache_item.rs  mod.rs
src/routes/: cache_routes.rs  mod.rs
tests/: integration_test.rs
