[package]
name = "cache_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
utoipa = { version = "4.2.3" }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
bb8 = "0.8.5"
bb8-redis = "0.16.0"
redis = { version = "0.26.1", features = ["tokio-comp"] }
env_logger = "0.11.5"
log = "0.4.22"
dotenv = "0.15"  # Environment configuration
prometheus = "0.13.4"
chrono = "0.4.26"
num_cpus = "1.13.1"
lazy_static = "1.4"
async-trait = "0.1.81"
serde_json = "1.0.122"
once_cell = "1.18.0"
reqwest = "0.12.5"

[dev-dependencies]
actix-rt = "2.6"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
